// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Promise.resolve should not import polyfill more than once 1`] = `
"import _Promise_resolve from \\"babel-plugin-transform-polyfills/polyfills/Promise/resolve\\";

const e = _Promise_resolve(_Promise_resolve([1, 2]));"
`;

exports[`Promise.resolve should replace Promise.resolve with a polyfill 1`] = `
"import _Promise_resolve from \\"babel-plugin-transform-polyfills/polyfills/Promise/resolve\\";

const c = _Promise_resolve();"
`;

exports[`Promise.resolve should work when part of a call chain 1`] = `
"import _Promise_resolve from \\"babel-plugin-transform-polyfills/polyfills/Promise/resolve\\";

const c = Object.keys(_Promise_resolve());"
`;
